--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "jms/serializer-bundle": "^2.1",
         "symfony/validator": "^2.7|^3.0|^4.0",
         "doctrine/orm": "^2.6",
-        "doctrine/doctrine-migrations-bundle": "^1.3"
+        "doctrine/doctrine-migrations-bundle": "^1.3",
+        "sonata-project/admin-bundle": "^3.32",
+        "sonata-project/doctrine-orm-admin-bundle": "^3.4.2"
     },
     "autoload": {
         "psr-4": {
