--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ matrix:
     - php: 7.1
 
 install:
-  - composer install
+  - php -d memory_limit=-1  $(which composer) instal
 
 script:
   - ./vendor/bin/check_code_style.sh
