--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,8 @@ matrix:
   include:
     - php: 7.1
 
-install:
-  - php -d memory_limit=-1  $(which composer) install
 
 script:
+  - which composer
   - ./vendor/bin/check_code_style.sh
   - ./vendor/bin/phpunit
