--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ matrix:
   include:
     - php: 7.1
 
-
 script:
-  - which composer
+  - php -d memory_limit=-1  $(which composer) install
   - ./vendor/bin/check_code_style.sh
   - ./vendor/bin/phpunit
