--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
   include:
     - php: 7.1
 install:
-   - /home/travis/.phpenv/shims/composer install
+   - php -d memory_limit=-1 /home/travis/.phpenv/shims/composer install
 script:
   - ./vendor/bin/check_code_style.sh
   - ./vendor/bin/phpunit
